--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <title>Single Page Apps for GitHub Pages</title>
     <script type="text/javascript">
       var segmentCount = 0;
-
+console.log("sadasdas")
       var l = window.location;
       l.replace(
         l.protocol +
